$Id$

Summary of Changes for Duro

Changes for Duro 0.8

- Changed argument order of RDB_extract_tuple().

- Added query optimizer

- Fixed WRAP syntax.

- RDB_binary_get() now returns a pointer to the data instead of copying it.

- Now allowing nonscalar types as operator argument and return types.

- Changed argument order of RDB_call_ro_op().

- Implemented RDB_get_dbs() and duro::env dbs.

- Implemented array-valued attributes and RDB_create_array_type().

- Durotcl: duro::array index and duro:array foreach now take a
  transaction argument.

- Implemented support for system-implemented user-defined types with
  more than one possrep component.

- Removed RDB_select_obj() and RDB_selector(). Use RDB_call_ro_op() and
  RDB_user_op() instead.

- Added support for user-defined types in Durotcl through duro::type.

- Added SUBSET operator.

- Removed the libname argument from RDB_implement_type(). Selectors,
  getters, and setters are now created using RDB_create_ro_op() and
  RDB_create_update_op().

- Implemented relation-valued table attributes.

- Added RDB_expr_contains().

- Implemented insert into RENAME, WRAP, UNWRAP tables.

- Implemented RDB_project_tuple() and RDB_join_tuples().

- Added tuple operations and relation literals to the expression parser.

- Fixed several bugs.

Changes for Duro 0.7

- Tcl interface, including evaluation of relational expressions in
  Tutorial D syntax. A C interface for expression parsing is provided.

- Implemented RDB_sdivide().

- Implemented tuple-valued table attributes, RDB_wrap(), and RDB_unwrap().

- Implemented RDB_remove().

- Implemented insert into projections.

- Added support for multiplication, division, unary minus, and string
  concatenation in expressions.

- Added RDB_table_to_obj() and RDB_obj_table().

- Renamed RDB_obj_set_XXX() to RDB_XXX_to_obj() and RDB_expr_table() to
  RDB_table_to_expr().

- Dropped RDB_tuple and RDB_array, using RDB_object instead. Renamed