@@ -25,9 +25,6 @@
 
 <h3>RDB_create_table</h3>
 
-<p>It is not enforced that a candidate key may not be a true subset
-of another.
-
 <p>System-generated key values are not supported.
 
 <h3>RDB_set_table_name</h3>
